src/test/ui/parser/keyword-type-as-identifier.stderr
error: expected identifier, found keyword `type`
  --> $DIR/keyword-type-as-identifier.rs:4:9
   |
LL |     let type = "foo";
   |         ^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#type = "foo";
   |         ^^^^^^

error: aborting due to previous error

